--- a/Hotel App/Application/Landing/City Guide/CityGuideViewController.xib
+++ b/Hotel App/Application/Landing/City Guide/CityGuideViewController.xib
@@ -42,10 +42,13 @@
                         <outlet property="delegate" destination="-1" id="sNQ-d7-2v8"/>
                     </connections>
                 </mapView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="lvm-2B-pex">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="lvm-2B-pex">
                     <rect key="frame" x="0.0" y="52" width="372" height="716"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="bag-fT-iXR"/>
                         <outlet property="delegate" destination="-1" id="Dhz-Hj-pa7"/>
