--- a/Hotel App/Application/Landing/Dining/DiningViewController.xib
+++ b/Hotel App/Application/Landing/Dining/DiningViewController.xib
@@ -18,12 +18,13 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="right-blurry.png" id="2Zf-Z9-PSV">
+                <view contentMode="scaleToFill" id="0sp-Af-1gy" customClass="HoleyRightPanelView">
                     <rect key="frame" x="374" y="0.0" width="650" height="768"/>
-                    <autoresizingMask key="autoresizingMask"/>
-                </imageView>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="blurry-info-panel.png" id="KX4-Br-s51">
-                    <rect key="frame" x="127" y="0.0" width="245" height="50"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="blurry-info-panel.png" id="KX4-Br-s51">
+                    <rect key="frame" x="127" y="-1" width="245" height="51"/>
                     <autoresizingMask key="autoresizingMask"/>
                 </imageView>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="left-panel.png" id="rXa-Es-538">
@@ -64,11 +65,12 @@ Other major awards include: Nation Restaurant News’ Fine Dining Hall of Fame R
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="singleLineEtched" allowsSelection="NO" rowHeight="124" sectionHeaderHeight="22" sectionFooterHeight="22" id="jSH-P1-WKG">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" allowsSelection="NO" rowHeight="124" sectionHeaderHeight="22" sectionFooterHeight="22" id="jSH-P1-WKG">
                     <rect key="frame" x="374" y="52" width="650" height="716"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="VrL-Cf-xl3"/>
                         <outlet property="delegate" destination="-1" id="XII-94-5ZL"/>
@@ -133,6 +135,5 @@ Other major awards include: Nation Restaurant News’ Fine Dining Hall of Fame R
         <image name="blurry-info-panel.png" width="244" height="49"/>
         <image name="check.png" width="372" height="248"/>
         <image name="left-panel.png" width="372" height="717"/>
-        <image name="right-blurry.png" width="652" height="768"/>
     </resources>
 </document>
